# Turtlebot_3_A_star_Path_Finder

./: README.md  action_list.txt  map.py
project3_ws/src/turtlebot3_project3/: CMakeLists.txt
project3_ws/src/turtlebot3_project3/scripts/: trajectory_controller.py
src/astar_falcon_planner/astar_falcon_planner/: falcon_amr_controller.py
src/astar_falcon_planner/astar_falcon_planner/submodules/: astar_planner.py  waypoints.txt
src/astar_falcon_planner/launch/: ros_falcon_astar.launch.py
src/turtlebot3_project3/: CMakeLists.txt  astar.py
src/turtlebot3_project3/launch/: robot_state_publisher.launch.py
src/turtlebot3_project3/scripts/: trajectory_controller.py
